base/services/rabbitmq/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${env}-${app}-rabbit
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
    - hosts:
        - '*.${app}.${int_zone_name}'
      secretName: ssl-tls-cert-cms
  ingressClassName: private-shared
  rules:
    - host: rabbit.${app}.${int_zone_name}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
